2003-01-13  Lauris Kaplinski  <lauris@kaplinski.com>

	* src/file.c (sp_file_open_dialog): Rearrange
	(sp_file_save_dialog): Ditto
	(sp_file_save_document): Ditto

2003-01-13  MenTaLguY  <mental@rydia.net>

	* src/toolbox.c (sp_maintoolbox_create): turned off user resizing of toolbox so it autoresizes properly

2003-01-13  MenTaLguY  <mental@rydia.net>

	* src/toolbox.c (sp_maintoolbox_create): turned off user resizing of toolbox so it autoresizes properly


	* src/print.c (sp_print_plain_bind): Move generic PS code here
	(sp_print_plain_release): Ditto
	(sp_print_plain_fill): Ditto
	(sp_print_plain_stroke): Ditto
	(sp_print_plain_image_R8G8B8A8_N): Ditto
	(sp_print_document): Implement very-very simple non-gnome print dialog

2003-01-12  Lauris Kaplinski  <lauris@kaplinski.com>

	* src/main.c: Made --without-popt working

2003-01-11  MenTaLguY  <mental@rydia.net>

	* src/xml/repr-io.c: removed bogus ATTLIST from DOCTYPE
	(sp_repr_read_file): factored out duplicated code into sp_repr_do_read + added parameter for default namespace
	(sp_repr_read_mem): factored out duplicated code into sp_repr_do_read + added parameter for default namespace
	(sp_repr_do_read): merged duplicated code from sp_repr_read_* family
	(sp_repr_do_read): insert xmlns decls for common namespaces
	(sp_repr_qualified_name): basic namespace handling for SVG, XLink, and Sodipodi namespaces
	(sp_repr_read_node): added parameter for default namespace
	(sp_repr_read_node): removed dead code and broken re-addition of xmlns declarations (xlink?)
	(repr_quote_write): UTF8 is ASCII-compatible -- removed inaccurate comment

	* src/xml/repr.h: added SP_*_NS_URI macros

	* src/document.c (sp_document_new): SVG is default NS
	(sp_document_new_from_mem): SVG is default NS

	* src/file.c (file_import_ok): SVG is default NS

	* src/interface.c (sp_ui_import_one_file): SVG is default NS

	* src/sodipodi.c (sodipodi_init): no default NS
	(sodipodi_load_preferences): no default NS
