@@ -1,3 +1,8 @@
+2003-01-15  Lauris Kaplinski  <lauris@kaplinski.com>
+
+	* src/draw-context.c (spdc_endpoint_snap): Make Ctrl to restrict directions
+	to multitudes of 15 degrees (thanks to Nathan Hurst)
+
 2003-01-13  Lauris Kaplinski  <lauris@kaplinski.com>
 
 	* src/file.c (sp_file_open_dialog): Rearrange
